[gd_scene load_steps=4 format=3 uid="uid://71qo3gy7wxtu"]

[ext_resource type="Script" path="res://projectiles/laser.gd" id="1_11pj5"]
[ext_resource type="Texture2D" uid="uid://1ksprtvf5pc3" path="res://assets/graphics/projectiles/blue.png" id="1_sb6h6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lu0sg"]
radius = 8.0
height = 90.0

[node name="Laser" type="Area2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_11pj5")

[node name="LaserImage" type="Sprite2D" parent="."]
position = Vector2(0, 37)
texture = ExtResource("1_sb6h6")

[node name="LaserCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_lu0sg")

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
